# memex

./: .gitignore  README.md  install.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
memex/: __init__.py  app.py  binaries.py  chat.py  onboarding.py  provider.py  services.py  stack.py  tools.py
src/: App.css  App.tsx  api.ts  app.tsx  binaries.ts  capture.ts  chat.ts  email-ingest.ts  email.ts  embeddings.ts  explore.ts  icons.tsx  identity.ts  index.tsx  ipfs.ts  messages.ts  mouse.ts  prompts.ts  provider.ts  services.ts  splash.ts  tools.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: context.rs  lib.rs  llm.rs  main.rs  mount.rs
src/components/: ChatLog.tsx  ChatPanel.tsx  ClustersModal.tsx  CommandPalette.tsx  Editor.tsx  EditorTabs.tsx  ExtractButton.tsx  FileViewer.tsx  GraphViewModal.tsx  HistoryTab.tsx  HoverPreview.tsx  ImportDialog.tsx  InputBar.tsx  Message.tsx  Ribbon.tsx  RichEditor.tsx  RightPanel.tsx  SearchModal.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx  markdown.ts
src/hooks/: useHistory.ts  useHover.ts  useNodeLabels.ts  useTabs.ts
