[project]
name = "memex"
version = "0.1.0"
description = "Control plane for memex-server and dagit"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.50",
    "openai>=1.0",
    "httpx>=0.25",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dagit = [
    "dagit @ git+https://github.com/systemshift/dagit.git",
]

[project.scripts]
memex = "memex:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
