[project]
name = "memex-graph"
version = "0.1.1"
description = "AI-native knowledge graph with decentralized social networking"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.50",
    "openai>=2.0",
    "httpx>=0.25",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pydagit>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/systemshift/memex"
Repository = "https://github.com/systemshift/memex"
Issues = "https://github.com/systemshift/memex/issues"

[project.scripts]
memex = "memex:main"
memex-stack = "memex.stack:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
